# etl_pipeline

./: .dockerignore  .env.template  Dockerfile  Dockerfile.test  Makefile  README.md  airflow.cfg  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  env  pyproject.toml  pytest.ini  requirements.txt  test_alpha_vantage_extract.py
airflow/: Dockerfile  airflow_local_settings.py  requirements.txt
airflow/config/: airflow_local_settings.py  config.yaml
airflow/dags/: archive_postgres_to_s3.py  controller_data_pipeline.py  email_alert_dag.py  etl01_rest_to_postgres.py  etl02_archive_postgres_to_s3.py  etl02_postgres_to_s3.py  etl03_postgres_to_redshift.py  etl04_postgres_cleanup.py  etl_pipeline_dag.py  postgres_cleanup.py  postgres_to_redshift.py  rest_to_postgres.py
config/: airflow_local_settings.py  config.yaml
config/production/: config.yaml
config/test/: README.md  test_cleanup_config.yaml  test_postgres_config.yaml  test_redshift_config.yaml  test_rest_config.yaml  (+1 more)
dags/: etl01_rest_to_postgres.py  etl_pipeline_dag.py  test_dag.py
docs/: README.md  updated_README.md
fluentbit/: fluent-bit.conf  parsers.conf
outdated/: default_args.py  table_cleaner.py  test_table_cleaner.py  test_vacuum_executor.py
scripts/: run_integration_tests.sh
src/: etl_automation.sh  extract.py  load.py  main.py  main_extract.py  maint_tranform.py  postgres_extractor.py  postgres_loader.py  s3_uploader.py  schema.py  setup.py  transform.py
test/: .dockerignore  Dockerfile  docker-compose.yml  requirements.txt
tests/: conftest.py
(+127 files in other folders)
